--- a/politics/9II/U1.md
+++ b/politics/9II/U1.md
@@ -1,7 +1,7 @@
-# 第一单元：我们共同的世界
+# 【九下】第一单元：我们共同的世界
 
-Last Edited: Mar 20, 2019 10:52 PM
-Tags: 政治
+Last Edited: Mar 25, 2019 8:30 PM
+Tags: 九年级下,政治
 
 # 第一课 同住地球村
 
@@ -9,28 +9,28 @@ Tags: 政治
 
 ### 当今世界：
 
-- 开放的
-- 发展的
-- 紧密联系的
+- 🚪开放的
+- 🏗发展的
+- 🔗紧密联系的
 
 ### 经济全球化的重要表现：
 
-- 商品生产在全球范围内完成
-- 商品贸易在全球范围内进行
+- 商品📦**生产**在全球范围内完成
+- 商品🛒**贸易**在全球范围内进行
 
 ### 经济全球化的消极影响：
 
-- 使风险和危机跨国界传递
+- 使❌**风险和❗危机**跨国界传递
 
 ### 文化多样的重要性：
 
-1. 是人类社会的基本特征
-2. 是世界文化充满活力的表现
-3. 人类文明进步的重要动力
+1. 是🧝人类社会的**基本特征**
+2. 是🌏世界文化**充满活力**的表现
+3. 人类文明进步⏫的**重要动力**
 
 ### 面对对样的文化，各国应怎么做？
 
-应当用**开放**和**包容**的心态，学习和借鉴优秀外来文化，促进和而不同，兼收并蓄的文明交流。
+应当用**开放**和**包容**的心态，🖊学习和借鉴优秀外来文化，促进和而不同，兼收并蓄的文明交流。
 
 ---
 
@@ -38,14 +38,14 @@ Tags: 政治
 
 ### 历史车轮滚滚向前的重要表现
 
-世界进入**多极化时代**。
+🌏世界进入**多极化时代**。
 
 ### 世界正处于大发展大变革大调整时期的表现
 
-1. 世界多极化
-2. 经济全球化
-3. 社会信息化
-4. 文化多样化
+1. 🌏世界多极化
+2. 📈经济全球化
+3. 📶社会信息化
+4. 🖼文化多样化
 
 ### 一些新兴经济体和发展中国家快速发展，给世界带来了哪些影响？
 
@@ -53,15 +53,15 @@ Tags: 政治
 
 ### 当今世界国际竞争的实质是什么？
 
-以**经济**和**科技实力**为基础的综合国力较量。
+以📈**经济**和🔬**科技实力**为基础的综合国力较量。
 
 ### 我国高举哪些旗帜？
 
-**和平 发展 合作 共赢**
+🕊**和平 🏗发展 🤝合作 🏆共赢**
 
 ### 新型国际关系是什么？
 
-相互尊重 公平正义 合作共赢
+👬相互尊重 ⚖公平正义 🥇合作共赢
 
 ---
 
@@ -71,11 +71,11 @@ Tags: 政治
 
 ### 当今时代的主题是什么？
 
-**和平**与**发展**
+🕊**和平**与🏗**发展**
 
 ### 世界整体上维持怎样的态势？
 
-世界**整体**上维持和平的态势，但**战争的阴影**从未远离。
+世界**整体**上维持🕊和平的态势，但⚔**战争的😱阴影**从未远离。
 
 ### （开）如何珍惜来之不易的和平？
 
@@ -113,8 +113,8 @@ Tags: 政治
 
 ### 面对全球性挑战，各国应该怎么做
 
-1. 坚持**对话协商**，建设一个**持久和平**的世界
-2. 坚持**共建共享**，建设一个**普遍安全**的世界
-3. 坚持**合作共赢**，建设一个**共同繁荣**的世界
-4. 坚持**交流互鉴**，建设一个**开放包容**的世界
-5. 坚持**绿色低碳**，建设一个**清洁美丽**的世界
+1. 坚持🗣️**对话协商**，建设一个**持久🕊和平**的世界
+2. 坚持🏗️**共建共享**，建设一个**普遍✅安全**的世界
+3. 坚持🤝**合作共赢**，建设一个**共同🏙繁荣**的世界
+4. 坚持💬**交流互鉴**，建设一个**开放🎉包容**的世界
+5. 坚持♻**绿色低碳**，建设一个**清洁🎈美丽**的世界
