新增政治九下第二单元内容

--- a/politics/9II/U2.md
+++ b/politics/9II/U2.md
@@ -1,8 +1,3 @@
-# 【九下】第二单元：世界舞台上的中国
-
-Last Edited: Mar 23, 2019 9:57 PM
-Tags: 九年级下,政治
-
 # 第三课 与世界紧相连
 
 ## 中国担当
@@ -21,10 +16,6 @@ Tags: 九年级下,政治
 
 这需要我们**全面深化改革**，统筹**国际国内**两个大局，走**和平发展**道路，奉行**互利互赢**的**开放**战略。
 
-### 中国的全球治理观
-
-**共商**、**共建**、**共享**
-
 ### 我国一切工作的中心
 
 以**经济建设**为中心
@@ -38,3 +29,48 @@ Tags: 九年级下,政治
 1. 我们要学习和借鉴人类文明的**一切优秀成果**，坚持**以我为主，兼收并蓄**。
 2. 中华文明在**交流互鉴**中**发展**。
 3. 文明因**交流**而多彩，文明因**互鉴而丰富**。
+
+### 在世界格局中，中国秉持怎样的思想?
+
+"**和而不同**"的思想
+
+### 中国的全球治理观
+
+**共商**、**共建**、**共享**
+
+### 世界正向着怎样的格局发展？
+
+公平公正、多元共治、包容有序。
+
+---
+
+# 第四课 与世界共同发展
+
+> 今天的中国，百业俱兴，政通人和，社会稳定，综合国力不断提升，面临新的发展契机。
+
+- ✅我国面临哪些发展契机？
+
+> “**天与不取，反受其咎；时至不行，反受其秧。**”机会稍纵即逝。**抓住机遇，勇于创新**，发展就能再上新台阶。
+
+### 中国面临哪些新风险、新挑战?
+
+1. 受**全球经济大环境**的影响，中国经济面临一定的**下行压力**和不少困难，几十年**高速发展**所积累的一些**矛盾与风险**也逐渐暴露出来，继续得到稳妥处理与解决。
+2. 随着**国家经济发展**和**劳动力素质的提高**，人们的收入不断增长。一方面提高了人民的生活水平，另一方面使企业劳动力成本上升。
+
+### 为什么中国制造在新的历史条件下需要「转型升级」？
+
+→为了降低制造成本，一些传统制造企业将工厂迁往成本更低的国家和地区。
+
+### 复杂多变的国际形势：
+
+- 国际上局部地区持续动荡
+- 恐怖主义持续蔓延
+- 一些国家因政府更迭导致政策法规发生变化
+
+> 挑战与机遇并存，困难与希望同在，我国的发展仍处于重要战略基于期。
+
+### 面对这些机遇和挑战，我们应该怎样做？
+
+1. 我们要审时度势，顺势而为，赢得主动；
+2. 面对成绩，我们要有忧患意识；
+3. 面对困难，我们要增强信心，运用自身的智慧，将困难和挑战转化为发展的动力和契机，开创新的局面。
