修复折叠内容无法显示

--- a/politics/9II/U2.md
+++ b/politics/9II/U2.md
@@ -49,6 +49,8 @@
 > 今天的中国，百业俱兴，政通人和，社会稳定，综合国力不断提升，面临新的发展契机。
 
 - ✅我国面临哪些发展契机？
+    1. 经过几十年的发展，中国已在资金、人才、技术、管理经验、基础建设等领域具备**良好的积累**，为经济发展从**“中国制造”到“中国智造”**转型奠定了良好的基础。
+    2. 和平、发展、合作、共赢的**时代潮流**越来越强劲，为中国的发展提供了良好的**外部环境**。中国的**国际影响力**不断提升，在经济合作、全球治理等多个领域发挥的**引领作用越来越大。**
 
 > “**天与不取，反受其咎；时至不行，反受其秧。**”机会稍纵即逝。**抓住机遇，勇于创新**，发展就能再上新台阶。
 
