--- a/politics/9II/U1.md
+++ b/politics/9II/U1.md
@@ -94,16 +94,16 @@ Tags: 九年级下,政治
 
 ### 需要解决的全球性问题有哪些？
 
-1. 不稳定性不确定性突出
-2. 经济增长动能不足
-3. 贫富分化严重
-4. 地区热点问题
-5. 恐怖主义
-6. 网络安全
-7. 重大传染性疾病
-8. 气候变化
+1. 📊不稳定性不确定性突出
+2. 📉经济增长动能不足
+3. 💸贫富分化严重
+4. 🛡地区热点问题
+5. 🧕恐怖主义
+6. 💻网络安全
+7. 👁重大传染性疾病
+8. 🌡气候变化
 
-**影响**：关系整个人类的生存，制约人类的发展，成为**亟待解决**的全球性问题**。**
+**影响**：关系整个人类的生存，制约人类的发展，成为**亟待解决**的🌏全球性问题**。**
 
 ### 各国解决全球性问题的必然选择
 
